homantests/service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: service1
  name: service1
  namespace: testing
spec:
  # ports:
  # - name: 80-80
  #   port: 80
  #   protocol: TCP
  #   targetPort: 80
  # selector:
  #   app: pod1
  # type: ClusterIP

  externalName: www.google.com
  type: ExternalName
status:
  loadBalancer: {}
